k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bankmore
  labels:
    app.kubernetes.io/name: bankmore
