k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: bankmore
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: external
    - port: 29092
      targetPort: 29092
      name: internal
    - port: 29093
      targetPort: 29093
      name: controller
  selector:
    app: kafka
